--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,11 @@ section{
 .slick-dots li.slick-active button:before{
   background: #c43190 !important;
 }
+@media (max-width: 768px) {
+  #experience{
+    height: auto !important;
+  }
+  .slick-dots{
+    bottom: 0 !important;
+  }
+}
